
  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
   - Add word wrap to quesiton dialogue
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeControler.py:
    - make the commercial archive transition more robust
    - when forcing the evms removal, ensure that all 
      evms rdepends get obsoleted so that the safety checks
      in the upgrader do not kick in and prevent the removal
  * updated list of demoted packages
  * updated ReleaseAnnouncement to include final text
  * updated demotions and mirrors to current gutsy

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Oct 2007 13:08:36 +0200

update-manager (1:0.80) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - enable transition to gutsy partner repository on 
      upgrade now that we have a archive
    - workaround kde tempdir handling (LP: #149186)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 05 Oct 2007 20:11:32 +0200

update-manager (1:0.79) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - do not log apts debug output to the user in server
      upgrade mode
    - when running in partial upgrade mode, do not run apport,
      this is handled by the libapt apport integration now, 
      (LP:#139394)
  * DistUpgrade/DistUpgradeCache.py,DistUpgradeControler.py:  
    - detect and workaround upgrade issues with envy
  * update-manager:
    - show version with --version (LP: #137353)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash with invalid utf-8 in polish locale (LP: #145351)
  * UpdateManager/UpdateManager.py:
    - remove debug output (LP: #145494)
  * DistUpgrade/DistUpgradeControler.py:
    - fix lock detection (LP: #145463)
  * UpdateManager/Common/utils.py:
    - show "0 KB" download size if there is nothing to download 
      (LP: #145308)
  * DistUpgrade/demoted.cfg, utils/demotions.py:
    - do not display demotions if they are replaced by something that is
      in main (e.g. gaim->pidgin, LP: #145767)