@@ -10,11 +10,13 @@ update-manager (1:0.81) gutsy; urgency=low
     - when forcing the evms removal, ensure that all 
       evms rdepends get obsoleted so that the safety checks
       in the upgrader do not kick in and prevent the removal
+    - when calculating the size required in /boot take into account
+      that installed initramfs images create a .bak file
   * updated list of demoted packages
   * updated ReleaseAnnouncement to include final text
   * updated demotions and mirrors to current gutsy
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Oct 2007 13:08:36 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Oct 2007 19:08:34 +0200
 
 update-manager (1:0.80) gutsy; urgency=low
 
